# dabba

./: .gitignore  README.md  architecture_implementation.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: connection.rs  database.rs  mod.rs  query.rs  schema.rs  table.rs
src-tauri/src/db/: mod.rs  mysql_adapter.rs
src-tauri/src/models/: connection.rs  mod.rs  query.rs  schema.rs
src-tauri/src/storage/: connection_store.rs  encryption.rs  mod.rs
src/components/: ResizableIntegration.test.tsx  ResizablePanels.test.tsx
src/components/ConnectionManager/: ConnectionForm.tsx  ConnectionList.test.tsx  ConnectionList.tsx
src/components/DatabaseExplorer/: DatabaseExplorer.tsx
src/components/QueryEditor/: AutocompleteProvider.test.ts  AutocompleteProvider.ts  Editor.tsx  EditorKeyboardShortcut.test.tsx  QueryEditor.test.tsx  QueryEditor.tsx  QueryEditorPanels.test.tsx
src/components/TableViewer/: AddRowModal.tsx  DeleteConfirmModal.tsx  EditRowModal.tsx  TableDataViewer.tsx  TableStructureView.tsx  TableViewerContainer.tsx
src/hooks/: useTabs.ts
src/services/: tauriApi.ts
src/store/: connectionStore.ts  queryStore.ts  tabStore.test.ts  tabStore.ts
src/styles/: globals.css
src/test/: monaco.mock.ts  setup.ts
src/types/: connection.ts  query.ts  schema.ts  table.ts
