[package]
name = "dbclient"
version = "0.1.0"
description = "Cross-platform SQL Database Client"
authors = ["DBClient Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite"] }
rusqlite = { version = "0.30", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# SSH
russh = "0.42"
russh-keys = "0.42"

# Error handling
thiserror = "1"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
